change overlay electron to electron-forge with vite-typescript

--- a/overlay/index.html
+++ b/overlay/index.html
@@ -1,32 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html>
+  <head>
+    <meta charset="UTF-8" />
     <title>Discord Image Bot</title>
-</head>
-<body>
-    <h1>Discord Image Bot</h1>
+
+  </head>
+  <body>
+    <h1>💖 Discord Image Bot!</h1>
     <div id="images"></div>
-    <script>
-        let socket = new WebSocket("ws://localhost:8080/ws");
-
-        socket.onmessage = function(event) {
-            console.log(event);
-            let imgURL = event.data;
-            let imgElement = document.createElement("img");
-            imgElement.src = imgURL;
-            imgElement.style.width = "300px";
-            document.getElementById("images").appendChild(imgElement);
-        };
-
-        socket.onclose = function(event) {
-            console.log("WebSocket closed: ", event);
-        };
-
-        socket.onerror = function(error) {
-            console.log("WebSocket error: ", error);
-        };
-    </script>
-</body>
+    <script type="module" src="/src/renderer.ts"></script>
+  </body>
 </html>
