--- a/overlay/index.html
+++ b/overlay/index.html
@@ -6,8 +6,7 @@
 
   </head>
   <body>
-    <h1>💖 Discord Image Bot!</h1>
-    <div id="images"></div>
+    <div id="messages"></div>
     <script type="module" src="/src/renderer.ts"></script>
   </body>
 </html>
