--- a/overlay/index.html
+++ b/overlay/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="messages"></div>
+    <div id="messageCode"></div>
     <script type="module" src="/src/renderer.ts"></script>
   </body>
 </html>
