--- a/overlay/index.html
+++ b/overlay/index.html
@@ -2,12 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Discord Image Bot</title>
+    <title>MemeOver</title>
 
   </head>
   <body>
-    <div id="messages"></div>
-    <div id="messageCode"></div>
+    <div id="root"></div>
     <script type="module" src="/src/renderer.ts"></script>
   </body>
 </html>
