--- a/overlay/index.html
+++ b/overlay/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>MemeOver</title>
 
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/renderer.ts"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <title>MemeOver</title>
+
+</head>
+
+<body>
+  <div>
+    <div id="messages"></div>
+    <div id="messageCode"></div>
+  </div>
+  <script type="module" src="/src/renderer.ts"></script>
+</body>
+
 </html>
