--- a/overlay/index.html
+++ b/overlay/index.html
@@ -4,14 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <title>MemeOver</title>
-
 </head>
 
 <body>
-  <div>
-    <div id="messages"></div>
-    <div id="messageCode"></div>
-  </div>
+  <div id="root"></div>
   <script type="module" src="/src/renderer.ts"></script>
 </body>
 
